# date_task_bot

./: .env.example  Dockerfile  README.md  deploy.sh  docker-compose.yml  pyproject.toml
.github/workflows/: build.yaml
alembic/: env.py
src/date_task_bot/: config.py  database.py  exceptions.py  exceptions_handler.py  healthcheck.py  logger.py  main.py  models.py  reminder.py
src/date_task_bot/presentation/: callbacks.py  middleware.py  states.py
src/date_task_bot/presentation/constants/: __init__.py  templates.py  text.py
src/date_task_bot/presentation/formatters/messages/: __init__.py  all_tasks.py  create_task.py  start.py  task.py  timezone.py
src/date_task_bot/presentation/formatters/models/: __init__.py  base_formatter.py  datetime_formatter.py  due_reminder_formatter.py  reminder_formatter.py  task_formatter.py
src/date_task_bot/presentation/routers/: __init__.py  commands.py  create_task.py  task_actions.py  view_tasks.py
src/date_task_bot/presentation/services/: __init__.py  rate_limiter.py  send_service.py
src/date_task_bot/presentation/utils/: __init__.py  callback_with_message.py  formatters.py  keyboard_builder.py  update_message.py
src/date_task_bot/repositories/: __init__.py  base_repository.py  exceptions.py  reminder_repository.py  schemas.py  task_repository.py  user_repository.py  user_settings_repository.py
src/date_task_bot/repositories/schemas/: __init__.py  base_schema.py  default_timing.py  pagination.py  reminder.py  task.py  task_timing.py  user.py  user_settings.py
src/date_task_bot/schemas/: __init__.py  base_schema.py  default_remind_timing.py  remind_timing.py  reminder.py  task.py  task_remind_timing.py  user.py  user_settings.py
src/date_task_bot/use_cases/: __init__.py  change_status.py  create_task.py  delete_task.py  edit_task.py  get_all_tasks.py  get_task.py  mark_as_done.py  parse_datetime.py  parse_datetime_from_text.py  register_user.py  timezone.py
tests/: config.py  conftest.py
tests/factories/: __init__.py  factory.py  orms.py  reminder_factory.py  task_factory.py  user_factory.py  user_settings_factory.py
tests/integration/: conftest.py  test_reminder_repo.py  test_task_repo.py  test_user_repo.py  test_user_settings_repository.py  utils.py
tests/unit/: conftest.py  test_create_task.py  test_create_task_uc.py  test_delete_task_uc.py  test_edit_task_uc.py  test_parsing.py  test_parsing_datetime_from_text.py
