[project]
name = "date-task-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.22.0",
    "aiohttp>=3.13.3",
    "aiosqlite>=0.21.0",
    "alembic>=1.17.1",
    "babel>=2.17.0",
    "dateparser>=1.2.2",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.44",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.4",
    "types-dateparser>=1.3.0.20260211",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "ANN", "D", "S", "T20"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D107", "B905", "N818"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN", "D"]
"src/date_task_bot/schemas/**" = ["ANN001", "N805", "ANN201"]
"src/date_task_bot/repositories/schemas/**" = ["ANN001", "N805", "ANN201"]
"src/date_task_bot/presentation/routers/**" = ["ANN201"]